# google-docs-tts

./: .gitignore  README.md  main.py  pyproject.toml  send_whatsapp.py  tts.py
src/google_docs_tts/: __init__.py  __main__.py  cli.py
